			   XPCE ChangeLog
			   ==============


VERSION 6.2.24, distributed with SWI-Prolog 5.3.17
==================================================

* FIXED: editor->transpose_characters to fail if the caret is at the
  end of the buffer instead of importing a random character.

* FIXED: Bug#154 Application modal frame handling.  Holger Kanwischer. 

VERSION 6.2.23, distributed with SWI-Prolog 5.3.16
==================================================

* FIXED: cross-referencer: handle directives with conjunctions properly.

VERSION 6.2.22, distributed with SWI-Prolog 5.3.15
==================================================

* FIXED: class tabbed_window destroying the window.  Steve Moyle.

VERSION 6.2.21, distributed with SWI-Prolog 5.3.14
==================================================

* ADDED/FIXED: untab/retab of tabs in the class tabbed_window.

* FIXED: Scrollbar update for windows used as graphicals (i.e. displayed
  on other windows).


VERSION 6.2.20, distributed with SWI-Prolog 5.3.13
==================================================

* FIXED: avoid trying to build GUI reporting for errors from user input.
  Dmitry.

* FIXED: Pass $(LDFLAGS) in generating Prolog interface.  Paulo Moura.


VERSION 6.2.19, distributed with SWI-Prolog 5.3.12
==================================================

* ADDED: Create CLASSINDEX.pl in XPCE library insex file.

* FIXED: PceEmacs: restore of syntax after processing a file.  Dmitry.

* ENHANCED: Improve checking of arguments in pce_begin_class.  After
  message from Joao Mariz.

* FIXED: PceEmacs: handle exported operators in colouring.


VERSION 6.2.18, distributed with SWI-Prolog 5.3.10
==================================================

* ENHANCED: Exploit GCC visibility("hidden") attribute.  Improves symbol
  handling for embedded applications on ELF-based systems.


VERSION 6.2.17, distributed with SWI-Prolog 5.3.9
=================================================
